# microflow-odt-rs

./: .gitmodules  Cargo.toml  README.md
examples/: cifar10-C.rs  cifar10_depthwise_train.rs  cifar10_train.rs  inside_outside_train.rs  leNet_conv_train.rs  leNet_mnist_train.rs  leNet_svhn_train.rs  leNet_train.rs  leNet_usps_train.rs  sine_train.rs  speech_train.rs
examples/esp32_cam_microflow_train_saved/: Cargo.toml
examples/esp32_cam_microflow_train_saved/src/: camera.rs  main.rs
microflow-macros/src/ops/: fully_connected.rs  softmax.rs
microflow-odt-macros/src/: lib.rs
microflow-train-macros/src/: lib.rs
microflow-train-macros/src/ops/: conv_2d.rs  depthwise_conv_2d.rs  fully_connected.rs
models/train/: cifar10c_expanded.txt  features.tflite  series_quantized.tflite  speech.tflite  speech_small.tflite  vibes.tflite
src/: gradient_average_pool.rs  gradient_conv_2d.rs  gradient_depthwise_conv_2d.rs  gradient_fully_connected.rs  lib.rs  update_layer.rs
